--- a/GoldenGuess/public/stylesheets/login.css
+++ b/GoldenGuess/public/stylesheets/login.css
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700");
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -15,10 +12,6 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    line-height: 1;
 }
 
 .overlay {
@@ -35,29 +28,25 @@ body {
 }
 
 .container {
-    width: 90%;
-    max-width: 480px;
-    height: 630px;
+    width: 480px;
+    height: 390px;
     background: transparent;
     backdrop-filter: blur(20px);
-    padding: 20px 40px;
+    padding: 30px 40px;
     border: 2px solid #c9a644;
     border-radius: 10px;
 }
 
 h1 {
-    font-size: 60px;
-    text-align: center;
+    font-size: 70px;
     color: #c9a644;
-    font-family: "DM Serif Display", serif;
-    font-weight: 800;
-    font-style: italic;
 }
 
 .input-container {
     position: relative;
     width: 100%;
-    margin: 15px 0;
+    height: 50px;
+    margin: 20px 0;
 }
 
 .input-container input{
@@ -68,16 +57,17 @@ h1 {
     border-radius: 10px;
     padding: 10px;
     font-size: 14px;
-    color: #dfdbdb;
+    color: rgb(159, 156, 156);
     outline: none;
 }
 
-label {
-    font-size: 0.7rem;
-    color: #dfdbdb;
+.input-container a {
+    text-decoration: none;
+    font-size: 0.9rem;
     display: inline-block;
-    margin-bottom: 5px;
-    
+    margin-top: 6px;
+    margin-left: 8px;
+    color: rgb(159, 156, 156);
 }
 
 .btn {
@@ -85,9 +75,21 @@ label {
     height: 34px;
     background-color: #c9a644;
     outline: none;
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 16px;
+    margin-top: 60px;
+}
+
+.register {
+    text-align: center;
+}
+
+.register p,a {
+    color: rgb(159, 156, 156);
+    font-size: 0.9rem;
+    display: inline-block;
+    text-decoration: none;
+    margin-top: 2px;
 }
