--- a/GoldenGuess/public/stylesheets/login.css
+++ b/GoldenGuess/public/stylesheets/login.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700");
 * {
     margin: 0;
     padding: 0;
@@ -6,12 +8,17 @@
 
 body {
     height: 100vh;
-    background-image: url(../imagens/confete.jpg);
+    background-image: url(../imagens/fundo.jpg);
     background-color: black;
     background-position: center ;
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+    line-height: 1.3;
 }
 
 .overlay {
@@ -35,25 +42,31 @@ body {
     padding: 30px 40px;
     border: 2px solid #c9a644;
     border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(149, 123, 57, 0.9);
 }
 
 h1 {
-    font-size: 70px;
+    font-size: 60px;
+    text-align: center;
     color: #c9a644;
+    text-shadow: 2px 2px 5px rgba(200, 153, 34, 0.9);
+    font-family: "DM Serif Display", serif;
+    font-weight: 800;
+    font-style: italic;
 }
 
 .input-container {
     position: relative;
     width: 100%;
-    height: 50px;
-    margin: 20px 0;
+    margin: 15px 0;
+
 }
 
 .input-container input{
     width: 100%;
     height: 100%;
     background: transparent;
-    border: 2px solid rgba(166, 141, 41, 0.2);
+    border: 2px solid rgba(114, 113, 109, 0.2);
     border-radius: 10px;
     padding: 10px;
     font-size: 14px;
@@ -63,11 +76,18 @@ h1 {
 
 .input-container a {
     text-decoration: none;
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     display: inline-block;
     margin-top: 6px;
     margin-left: 8px;
     color: rgb(159, 156, 156);
+}
+
+label {
+    font-size: 0.7rem;
+    color: #dfdbdb;
+    display: inline-block;
+    margin-bottom: 5px;
 }
 
 .btn {
@@ -79,7 +99,14 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 20px;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
 }
 
 .register {
@@ -88,8 +115,12 @@ h1 {
 
 .register p,a {
     color: rgb(159, 156, 156);
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     display: inline-block;
     text-decoration: none;
-    margin-top: 2px;
+    margin-top: 3px;
+}
+
+.register a {
+    color: white;
 }
