--- a/GoldenGuess/public/stylesheets/principal.css
+++ b/GoldenGuess/public/stylesheets/principal.css
@@ -1,79 +1,110 @@
-@import url('https://fonts.googleapis.com/css2?family=Molle&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700");
 * {
-  font-family: "Molle", serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
-  
+  min-height: 100vh;
+}
+
+.banner {
+  background-image: url(../imagens/ft.jpg);
+  background-size: cover;
+  background-position: center 110;
+  background-color: black;
+  object-fit: contain;
+  position: relative;
+  height: 700px;
+}
+
+.banner--fadeBottom {
+  height: 40rem;
+  background-image: linear-gradient(180deg, transparent, rgba(11, 11, 15, 0.75), #000000);
+}
+
+.banner-text {
+  display: flex;
+  position: absolute;
+  text-align: justify;
+  justify-content: center; 
+  flex-direction: column;
+}
+
+.banner-text h1 {
+  font-family: "DM Serif Display", serif;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 62px;
+  margin: 40px;
+  margin-top: 220px;
+  color: #f3efef;
+  text-shadow: 2px 2px 5px rgba(221, 212, 212, 0.7);
+}
+
+.banner-text p {
+  color: white;
+  font-size: 20px;
+  font-weight: 200;
+  margin: 40px;
+  margin-top: 0px;
 }
 
 .navbar {
   width: 100%;
-  height: 60px;
-  background-color: #edeae3;
-  position: sticky;
-  top: 0;
+  margin: 0 auto;
 }
 
-.navbar-container {
+nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 50px;
   height: 100%;
   color: white;
 }
 
-.logo-container {
-  flex: 1;
-}
-
-.logo {
-  font-size: 30px;
+.logo-container h1 {
+  font-family: "DM Serif Display", serif;
   font-weight: 800;
-  color: #be9e35;
+  font-style: italic;
+  font-size: 35px;
+  color: #cba34b;
+  text-shadow: 2px 2px 5px rgba(202, 147, 51, 0.7);
 }
 
-.menu-container {
-  flex: 6;
-}
-
-.menu-list {
-  display: flex;
+nav ul {
   list-style: none;
+  margin-left: 1000px;
+  margin-top: 20px;
 }
 
-.menu-list-item {
-  margin-right: 30px;
+nav ul li {
+  display: inline-block;
+  gap: 100px;
 }
 
-.banner {
-  background-image: url(../imagens/FernandaTorres.jpg);
-  background-size: cover;
-  background-position: center ;
-  background-color: black;
-  object-fit: contain;
-  height: 600px;
+nav ul li a {
+  text-decoration: none;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #c4c2c2;
+  border-radius: 30px;
+  transition: 0.6s;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 
-.banner--fadeBottom {
-  height: 38rem;
-  background-image: linear-gradient(180deg, transparent, rgba(37,37,37,0.61), #000000);
-}
-
-.banner-text {
-  font-size: 30px;
-  font-weight: 800;
+nav ul li a:hover {
   color: white;
-  display: flex;
-  text-align: justify;
-  justify-content: center; /* Alinha horizontalmente */
-  align-items: center; /* Alinha verticalmente */
-  height: 300px; /* Defina uma altura para o contêiner */
 }
 
 section {
   position: relative;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   height: 550px;
   padding: 15px;
   padding: 0 70px;
