--- a/GoldenGuess/public/stylesheets/administrador.css
+++ b/GoldenGuess/public/stylesheets/administrador.css
@@ -103,7 +103,7 @@ body {
 }
 
 .main-add-card .card {
-  width: 400px;
+  width: 600px;
   height: 130px;
   margin: 10px;
   margin-left: 0px;
@@ -151,7 +151,9 @@ body {
 
 h3 {
   margin-bottom: 10px;
-  color: #ddd5be;
+  position: relative;
+  text-align: center;
+  color: #111010;
   font-size: 20px;
   font-family: "Poppins", sans-serif;
   font-weight: 500;
@@ -167,24 +169,29 @@ h3 {
   font-size: 0.7rem;
   color: #dfdbdb;
   display: inline-block;
-  margin-bottom: 5px;
+  margin-left: 12px;
 }
 
 .input-container input {
-  width: 95%;
+  width: 86%;
   height: 100%;
   background: transparent;
   border: 2px solid rgba(114, 113, 109, 0.2);
   border-radius: 10px;
-  padding: 10px;
+  padding: 8px 15px;
   font-size: 14px;
   color: rgb(159, 156, 156);
   outline: none;
+  margin: 8px; 
+  margin-left: 12px;
 }
 
 .btn {
+  width: 44%;
+  height: 100%;
   color: black;
-  border: #c9a644;
+  border: #c9a644; 
+  background-color: #c9a644;
   padding: 8px 15px;
   border-radius: 5px;
   cursor: pointer;
@@ -194,11 +201,7 @@ h3 {
   display: inline-block;
   justify-content: center;
   margin: 8px; 
-  margin-top: 10px;
-}
-
-.btn-excluir {
-  background: #a32626;
+  margin-left: 12px;
 }
 
 .btn:hover {
@@ -206,7 +209,38 @@ h3 {
   transition: transform 0.3s ease;
 }
 
-.btn-excluir-1 {
+.btn-salvar {
+  width: 44%;
+  height: 100%;
+  color: black;
+  background-color: #c9a644;
+  border: #c9a644; 
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.7rem;
+  font-weight: 500;
+  display: block;
+  margin: 0 auto;
+  justify-content: center;
+  margin-top: 14px;
+}
+
+.btn-salvar:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+.hidden {
+  display: none;
+}
+
+form h3 {
+  color: #dfdbdb;
+}
+
+.btn-excluir {
   background: #a32626;
   border: #060606;
   font-family: "Poppins", sans-serif;
@@ -214,14 +248,14 @@ h3 {
   color: rgb(0, 0, 0);
   position: absolute;
   font-size: 0.7rem;
-  margin-left: 353px;
-  margin-top: -35px;
-  padding: 5px 10px;
+  margin-left: -40px;
+  margin-top: -63px;
+  padding: 5px 8px;
   border-radius: 5px;
   cursor: pointer;
 }
 
-.btn-excluir-1:hover {
+.btn-excluir:hover {
   transform: scale(1.05);
   transition: transform 0.3s ease;
 }
@@ -269,4 +303,119 @@ h3 {
 
 .popup-close:hover {
   background: #d4b05c;
+}
+
+.form-select {
+  width: 95%;
+  height: 100%;
+  background: transparent;
+  border: 2px solid rgba(114, 113, 109, 0.2);
+  border-radius: 10px;
+  padding: 8px 15px;
+  font-size: 14px;
+  color: rgb(159, 156, 156);
+  outline: none;
+  margin: 8px; 
+  margin-left: 12px;
+}
+
+.categoria-container h4 {
+  font-size: 0.7rem;
+  color: #dfdbdb;
+  display: inline-block;
+  font-weight: 200;
+  margin-left: 12px;
+  text-transform: capitalize;
+}
+
+.indicados-container {
+  background-color: #2d2d2b;
+  border-radius: 10px;
+  text-transform: capitalize;
+}
+
+.categoria-vencedores h4 {
+  font-size: 0.7rem;
+  color: #dfdbdb;
+  display: inline-block;
+  font-weight: 200;
+  margin-left: 12px;
+  text-transform: capitalize;
+}
+
+.indicado-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  background-color: #2d2d2b;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.indicado-item:hover {
+  background-color: #4a4a4a;
+}
+
+.indicado-item input[type="radio"] {
+  margin: 0;
+  cursor: pointer;
+}
+
+.indicado-item span {
+  color: #ffffff;
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+}
+
+.popup-overlay-erro {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999; 
+}
+
+.popup-erro {
+  display: none;
+  position: fixed;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgb(247, 247, 247);
+  color: rgb(15, 15, 15);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  line-height: 1.2;
+  z-index: 1000;
+  width: 300px;
+  height: 130px;
+}
+
+.popup-erro p{
+  position: relative;
+  top: 16px;  
+}
+
+.popup-close-erro {
+  position: absolute;
+  bottom: 10px;  
+  left: 50%;  
+  transform: translateX(80%);
+  padding: 7px 15px;
+  background-color: #c9a644;
+  color: rgb(0, 0, 0);
+  font-weight: 500;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.popup-close-erro:hover {
+  background-color: #8d6f1d;
 }
